--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -24,8 +24,7 @@ jobs:
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push Docker image
         id: docker_build_push
         uses: docker/build-push-action@v5
